--- a/workloads/eks-example-dep.yaml
+++ b/workloads/eks-example-dep.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: eks-example
-        image: 038667029000.dkr.ecr.eu-west-1.amazonaws.com/eks-example:e15bd9c8
+        image: 038667029000.dkr.ecr.eu-west-1.amazonaws.com/eks-example:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
